#135 z-index correction

--- a/frontend/components/statistics/StatisticsColumn.less
+++ b/frontend/components/statistics/StatisticsColumn.less
@@ -8,6 +8,7 @@
         display: flex;
         flex-direction: column-reverse;
         position: relative;
+        z-index: 1;
 
         .statistics-column-text {
             color: @color;
